Fix topic div being hidden on iOS devices

--- a/server/static/css/app.css
+++ b/server/static/css/app.css
@@ -373,10 +373,6 @@ li {
 }
 
 /** Detail view */
-#detail {
-    display: none;
-}
-
 #detail .detailDate {
     color: #888;
     font-size: 0.9em;
